# Knoxic

./: .env  .gitignore  CMakeLists.txt  LICENSE  Makefile  a.out  app.cpp  app.hpp  build.sh  keybord_movement_controller.cpp  keybord_movement_controller.hpp  knoxic_camera.cpp  knoxic_camera.hpp  knoxic_descriptors.hpp  knoxic_device.cpp  knoxic_device.hpp  knoxic_frame_info.hpp  knoxic_game_object.hpp  knoxic_model.cpp  knoxic_model.hpp  knoxic_pipeline.cpp  knoxic_pipeline.hpp  knoxic_renderer.cpp  knoxic_renderer.hpp  knoxic_swap_chain.cpp  knoxic_swap_chain.hpp  knoxic_window.cpp  knoxic_window.hpp  main.cpp  mouse_movement_controller.cpp  mouse_movement_controller.hpp  render_system.cpp  render_system.hpp
res/models/: bloom_text.fbx
res/sketchfab/medieval_helmet/: scene.gltf
res/textures/bricks4K/: Bricks040_4K-JPG.usda  Bricks040_4K-JPG.usdc
shaders/: lighting.frag  lighting.vert  material.frag  material.vert  point_light.frag  point_light.vert  simple_lighting.frag  simple_shader.frag  simple_shader.vert
shaders/vulkan/: vk_blur.frag  vk_blur.vert  vk_brightness_extract.frag  vk_directional_light.frag  vk_directional_light.vert  vk_lighting.frag  vk_lighting.vert  vk_point_light.frag  vk_point_light.vert  vk_post_process.frag  vk_spot_light.frag  vk_spot_light.vert
src/: app.cpp  app.hpp  knoxic_camera.cpp  knoxic_camera.hpp  knoxic_descriptors.cpp  knoxic_frame_info.hpp  knoxic_game_object.hpp  knoxic_model.cpp  knoxic_pipeline.cpp  knoxic_pipeline.hpp  knoxic_window.hpp  main.cpp
src/app/: app.cpp  app.hpp
src/camera/: knoxic_camera.cpp  knoxic_camera.hpp
src/core/: knoxic_buffer.cpp  knoxic_buffer.hpp  knoxic_device.cpp  knoxic_device.hpp  knoxic_game_object.cpp  knoxic_game_object.hpp  knoxic_swap_chain.cpp  knoxic_swap_chain.hpp  knoxic_utils.hpp  knoxic_window.cpp  knoxic_window.hpp
src/core/ecs/: component_Manager.hpp  component_array.hpp  components.cpp  components.hpp  coordinator.hpp  coordinator_instance.cpp  coordinator_instance.hpp  ecs_systems.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  types.hpp
src/core/vulkan/: knoxic_vk_buffer.cpp  knoxic_vk_buffer.hpp  knoxic_vk_descriptors.cpp  knoxic_vk_descriptors.hpp  knoxic_vk_device.cpp  knoxic_vk_device.hpp  knoxic_vk_swap_chain.cpp  knoxic_vk_swap_chain.hpp
src/graphics/: knoxic_frame_info.hpp  knoxic_material.cpp  knoxic_material.hpp  knoxic_model.cpp  knoxic_model.hpp  knoxic_pipeline.cpp  knoxic_pipeline.hpp  knoxic_renderer.cpp  knoxic_renderer.hpp  knoxic_shadow_map.hpp
src/graphics/vulkan/: knoxic_vk_material.cpp  knoxic_vk_material.hpp  knoxic_vk_model.cpp  knoxic_vk_model.hpp  knoxic_vk_pipeline.cpp  knoxic_vk_pipeline.hpp  knoxic_vk_renderer.cpp  knoxic_vk_renderer.hpp
src/input/: keybord_movement_controller.cpp  keybord_movement_controller.hpp  mouse_movement_controller.cpp  mouse_movement_controller.hpp
src/object/: knoxic_game_object.cpp  knoxic_game_object.hpp
src/systems/: knoxic_editor_system.cpp  knoxic_editor_system.hpp  knoxic_ui_system.cpp  knoxic_ui_system.hpp  material_system.cpp  material_system.hpp  point_light_system.cpp  point_light_system.hpp  render_system.cpp  render_system.hpp
src/systems/vulkan/: knoxic_vk_directional_light_system.cpp  knoxic_vk_directional_light_system.hpp  knoxic_vk_material_system.cpp  knoxic_vk_material_system.hpp  knoxic_vk_point_light_system.cpp  knoxic_vk_point_light_system.hpp  knoxic_vk_post_process_system.cpp  knoxic_vk_post_process_system.hpp  knoxic_vk_render_system.cpp  knoxic_vk_render_system.hpp  knoxic_vk_spot_light_system.cpp  knoxic_vk_spot_light_system.hpp
